2022-09-15T02:15:37Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3057344535
* notice: last 14d: unq all: 13 35
* notice: prev accum: outdated-unq outdated-all / unq all: 578 2399 / 611 2447
* notice: next accum: outdated-unq outdated-all / unq all: 587 2412 / 611 2447
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +5 +7 -0 -1 / 5 6
* notice: removed / changed dates: [2022-08-31] / [2022-09-01]

2022-09-14T16:29:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3054458740
* notice: last 14d: unq all: 19 48
* notice: prev accum: outdated-unq outdated-all / unq all: 578 2399 / 611 2446
* notice: next accum: outdated-unq outdated-all / unq all: 578 2399 / 611 2447
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-14]

2022-09-14T08:26:35Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3051267705
* notice: last 14d: unq all: 19 47
* notice: prev accum: outdated-unq outdated-all / unq all: 578 2399 / 610 2446
* notice: next accum: outdated-unq outdated-all / unq all: 578 2399 / 611 2446
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-31 2022-09-14]

2022-09-14T02:05:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3049658999
* notice: last 14d: unq all: 19 47
* notice: prev accum: outdated-unq outdated-all / unq all: 577 2397 / 610 2445
* notice: next accum: outdated-unq outdated-all / unq all: 578 2399 / 610 2446
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-30] / []

2022-09-13T16:28:08Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3046755954
* notice: last 14d: unq all: 19 48