@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-15T02:15:37Z",
+  "timestamp" : "2022-09-15T08:29:21Z",
   "count_outdated" : 2412,
   "uniques_outdated" : 587,
-  "count" : 2447,
-  "uniques" : 611,
+  "count" : 2449,
+  "uniques" : 613,
   "clones" : [
     {
       "timestamp": "2022-09-01T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
