@@ -1,6 +1,6 @@
 {
-  "count": 35,
-  "uniques": 13,
+  "count": 37,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-09-01T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
