@@ -1,3 +1,11 @@
+2022-09-15T08:29:21Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3058931925
+* notice: last 14d: unq all: 14 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 587 2412 / 611 2447
+* notice: next accum: outdated-unq outdated-all / unq all: 587 2412 / 613 2449
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-15]
+
 2022-09-15T02:15:37Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3057344535
 * notice: last 14d: unq all: 13 35
